049_rot_matrix/grade.txt
Grading at 10/04/2023:16:26:15.369514
For commit ID 2d4d937752f0a97d0843ef47b337bb71bc6aebb2
Grading at Wed Oct  4 12:26:15 PM EDT 2023
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘rotateMatrix’:
rotateMatrix.c:6:7: error: unused variable ‘c’ [-Werror=unused-variable]
    6 |   int c;
      |       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
